Changing new Integer/new Long with Integer.valueOf/Long.valueOf Replacing "UTF-8" String with StandardCharsets.UTF_8 Removing continue because is not needed as a last sentence Adding Try with resources instead of Try/Finally